// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-button Default 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--secondary"
    >
      Hello, I am a button!
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Hello, I am a link!
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Destructive variant 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary btn--destructive"
    >
      Primary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--primary fake-btn--destructive"
      href="https://ebay.com"
    >
      Primary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--destructive"
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary fake-btn--destructive"
      href="https://ebay.com"
    >
      Secondary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--tertiary btn--destructive"
    >
      Tertiary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--tertiary fake-btn--destructive"
      href="https://ebay.com"
    >
      Tertiary Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Disabled 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary"
      disabled=""
    >
      Primary Button
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary"
      disabled=""
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
    >
      Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Flexible Button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--primary btn--fluid"
  >
    <span
      class="btn__cell"
      style="justify-content: space-between;"
    >
      <span>
        Select
      </span>
      <span
        style="display: inline-flex;"
      >
        <span>
          Any
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Fluid 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary btn--fluid"
    >
      Primary Button
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--fluid"
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary fake-btn--fluid"
      href="https://www.ebay.com"
    >
      Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Icon Button 1`] = `
<DocumentFragment>
  <p>
    <button
      aria-label="Menu button"
      class="btn btn--primary btn--icon-only"
    >
      <svg
        aria-hidden="true"
        class="icon icon--menu"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-menu"
        />
      </svg>
    </button>
  </p>
  <p>
    <button
      aria-label="Settings button"
      class="btn btn--secondary btn--icon-only"
    >
      <svg
        aria-hidden="true"
        class="icon icon--settings"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-settings"
        />
      </svg>
    </button>
  </p>
  <p>
    <a
      aria-label="Settings link"
      class="fake-btn fake-btn--secondary fake-btn--icon-only"
      href="#"
    >
      <svg
        aria-hidden="true"
        class="icon icon--settings"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-settings"
        />
      </svg>
    </a>
  </p>
  <p>
    <button
      aria-label="Destructive button"
      class="btn btn--secondary btn--destructive btn--icon-only"
    >
      <svg
        aria-hidden="true"
        class="icon icon--delete"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-delete"
        />
      </svg>
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Loading button 1`] = `
<DocumentFragment>
  <p>
    <button
      aria-live="polite"
      class="btn btn--primary"
    >
      <span
        class="btn__cell"
      >
        <span
          aria-label="Busy"
          class="progress-spinner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner"
            focusable="false"
            height="24px"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner"
            />
          </svg>
        </span>
      </span>
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Partially disabled Button 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="btn btn--primary"
  >
    Hello, I am a button!
  </button>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Priority 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary"
    >
      Primary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--primary"
      href="https://ebay.com"
    >
      Primary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Secondary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Secondary Button (Default)
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Secondary Link (Default)
    </a>
  </p>
  <p>
    <button
      class="btn btn--tertiary"
    >
      Tertiary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--tertiary"
      href="https://ebay.com"
    >
      Tertiary Link
    </a>
  </p>
  <p>
    <button
      class="btn"
    >
      Base Button
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Size 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--secondary btn--large"
    >
      Large Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary fake-btn--large"
      href="https://ebay.com"
    >
      Large Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Default Size Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Default Size Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Transparent 1`] = `
<DocumentFragment>
  <div
    style="background: rgba(66, 214, 205, 0.5);"
  >
    <p>
      <button
        class="btn btn--secondary"
      >
        Default Button
      </button>
    </p>
    <p>
      <button
        class="btn btn--secondary btn--transparent"
      >
        Transparent Button
      </button>
    </p>
    <p>
      <button
        class="btn btn--secondary btn--destructive btn--transparent"
      >
        Transparent Destructive Button
      </button>
    </p>
    <p>
      <a
        class="fake-btn fake-btn--secondary fake-btn--transparent"
        href="https://ebay.com"
      >
        Transparent Link
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Truncated 1`] = `
<DocumentFragment>
  <div
    style="max-width: 200px;"
  >
    <p>
      <button
        class="btn btn--secondary btn--truncated"
      >
        Hello, I am a button! this is a long text
      </button>
    </p>
    <p>
      <a
        class="fake-btn fake-btn--secondary fake-btn--truncated"
        href="https://ebay.com"
      >
        Hello, I am a link! this is a long text
      </a>
    </p>
  </div>
</DocumentFragment>
`;
